@@ -1,2 +1,0 @@
-Site URL: https://daftsex.com/
-DMCA: https://daftsex.com/holders/
